--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "font-awesome": "^4.7.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/willcpierson/kelp_full_stack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/willcpierson/kelp_full_stack/issues"
+  },
+  "homepage": "https://github.com/willcpierson/kelp_full_stack#readme"
 }
