--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "font-awesome": "^4.7.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/willcpierson/kelp_full_stack.git"
